replace fedora with ubuntu

--- a/vim/ruby/command-t/Makefile
+++ b/vim/ruby/command-t/Makefile
@@ -4,38 +4,38 @@ SHELL = /bin/sh
 #### Start of system configuration section. ####
 
 srcdir = .
-topdir = /usr/lib/ruby/1.8/i686-linux
+topdir = /usr/lib/ruby/1.8/i386-linux
 hdrdir = $(topdir)
 VPATH = $(srcdir):$(topdir):$(hdrdir)
-exec_prefix = $(prefix)
 prefix = $(DESTDIR)/usr
-libexecdir = $(prefix)/lib/ruby1.8
-vendorlibdir = $(vendordir)/$(ruby_version)
-vendorarchdir = $(vendorlibdir)/$(sitearch)
-rubylibdir = $(libdir)/ruby/$(ruby_version)
-sitedir = $(DESTDIR)/usr/local/lib/site_ruby
-vendordir = $(libdir)/ruby/vendor_ruby
-docdir = $(datarootdir)/doc/$(PACKAGE)
-sharedstatedir = $(prefix)/com
-libdir = $(exec_prefix)/lib
-localedir = $(datarootdir)/locale
-sitelibdir = $(sitedir)/$(ruby_version)
-sitearchdir = $(sitelibdir)/$(sitearch)
-mandir = $(prefix)/share/man
+exec_prefix = $(DESTDIR)/usr
+vendordir = $(DESTDIR)/usr/lib/ruby
+datadir = $(DESTDIR)/usr/share
+sitearchdir = $(libdir)/ruby/site_ruby/$(ruby_version)/$(sitearch)
+includedir = $(DESTDIR)/usr/include
 datarootdir = $(prefix)/share
-archdir = $(rubylibdir)/$(arch)
-dvidir = $(docdir)
-infodir = $(prefix)/share/info
-sbindir = $(exec_prefix)/sbin
-oldincludedir = $(DESTDIR)/usr/include
 sysconfdir = $(DESTDIR)/etc
-bindir = $(exec_prefix)/bin
-psdir = $(docdir)
-localstatedir = $(DESTDIR)/var
+vendorarchdir = $(libdir)/ruby/$(ruby_version)/$(sitearch)
 pdfdir = $(docdir)
-datadir = $(datarootdir)
-includedir = $(prefix)/include
+sitedir = $(DESTDIR)/usr/lib/ruby/site_ruby
+archdir = $(libdir)/ruby/$(ruby_version)/$(sitearch)
+dvidir = $(docdir)
 htmldir = $(docdir)
+sharedstatedir = $(DESTDIR)/var/lib
+infodir = $(DESTDIR)/usr/share/info
+vendorlibdir = $(vendordir)/$(ruby_version)
+sbindir = $(DESTDIR)/usr/sbin
+bindir = $(DESTDIR)/usr/bin
+libexecdir = $(DESTDIR)/usr/libexec
+localedir = $(datarootdir)/locale
+docdir = $(datarootdir)/doc/$(PACKAGE)
+libdir = $(DESTDIR)/usr/lib
+rubylibdir = $(vendordir)/$(ruby_version)
+oldincludedir = $(DESTDIR)/usr/include
+localstatedir = $(DESTDIR)/var
+mandir = $(DESTDIR)/usr/share/man
+psdir = $(docdir)
+sitelibdir = $(sitedir)/$(ruby_version)
 
 CC = gcc
 LIBRUBY = $(LIBRUBY_SO)
@@ -44,12 +44,12 @@ LIBRUBYARG_SHARED = -l$(RUBY_SO_NAME)
 LIBRUBYARG_STATIC = -l$(RUBY_SO_NAME)-static
 
 RUBY_EXTCONF_H = 
-CFLAGS   =  -fPIC -fno-strict-aliasing -g -g -O2  -fPIC $(cflags) 
+CFLAGS   =  -fPIC -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4  -m32 -march=i686 -mtune=atom -fasynchronous-unwind-tables -fno-strict-aliasing  -fPIC $(cflags) 
 INCFLAGS = -I. -I$(topdir) -I$(hdrdir) -I$(srcdir)
 DEFS     = -D_FILE_OFFSET_BITS=64
-CPPFLAGS = -DHAVE_RUBY_H -D_FORTIFY_SOURCE=2 $(DEFS) $(cppflags)
+CPPFLAGS = -DHAVE_RUBY_H  $(DEFS) $(cppflags)
 CXXFLAGS = $(CFLAGS) 
-ldflags  = -L. -Wl,-Bsymbolic-functions -Wl,-z,relro -rdynamic -Wl,-export-dynamic
+ldflags  = -L. -Wl,-z,relro  -rdynamic -Wl,-export-dynamic
 dldflags = 
 archflag = 
 DLDFLAGS = $(ldflags) $(dldflags) $(archflag)
@@ -57,12 +57,12 @@ LDSHARED = $(CC) -shared
 AR = ar
 EXEEXT = 
 
-RUBY_INSTALL_NAME = ruby1.8
-RUBY_SO_NAME = ruby1.8
-arch = i686-linux
-sitearch = i686-linux
+RUBY_INSTALL_NAME = ruby
+RUBY_SO_NAME = ruby
+arch = i386-linux
+sitearch = i386-linux
 ruby_version = 1.8
-ruby = /usr/bin/ruby1.8
+ruby = /usr/bin/ruby
 RUBY = $(ruby)
 RM = rm -f
 MAKEDIRS = mkdir -p
