重装系统前的备份

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,41 +65,41 @@ bind / command-prompt "splitw 'exec ri %%'"            # ruby doc (prefix /)
 bind r source ~/.tmux.conf \; display "Configuration reloaded!"
 
 #-- statusbar --#
-#set -g status-utf8 on
-set -g status-interval 1
+set -g status-utf8 on
 set -g status-keys vi
 
 setw -g mode-keys vi
-setw -g automatic-rename off
+setw -g automatic-rename yes
 
 #-- colorscheme --#
 # see also: https://github.com/daethorian/conf-tmux/blob/master/colors/zenburn.conf
 
 # modes
-#setw -g clock-mode-colour colour223
+#setw -g clock-mode-colour colour32
 #setw -g mode-attr bold
-#setw -g mode-fg colour223
+setw -g mode-fg colour223
 #setw -g mode-bg colour235
 
 # panes
-#set -g pane-border-bg colour234
-#set -g pane-border-fg colour234
-#set -g pane-active-border-bg colour232
-#set -g pane-active-border-fg colour232
+#set -g pane-border-bg colour30
+set -g pane-border-fg colour30
+#set -g pane-active-border-bg colour88
+set -g pane-active-border-fg colour88
 
 ## statusbar
 set -g status-justify centre
-#set -g status-bg colour235
+set -g status-bg colour30
 #set -g status-fg colour248
 set -g status-attr dim
 
 set -g status-left "#[default]» #[fg=colour187]#S #[default]• #[fg=colour187]w#I.p#P#[default]"
 set -g status-left-attr bright
+set -g status-interval 2
 set -g status-left-length 80
-set -g status-right "开机时间：#[fg=colour255]#( /usr/bin/uptime | awk '{print $3}'| sed 's/,//g') #[default]•#[fg=colour190]自信,专注#[default]• 系统负载：#[fg=colour255]#(cut -d ' ' -f 1-3 /proc/loadavg)"
+set -g status-right "#[fg=colour222]#(/home/lalor/Document/sendInfoToTmux.sh) #[default]开机时间：#[fg=colour255]#( /usr/bin/uptime | awk '{print $3}'| sed 's/,//g') #[default]•#[fg=colour190]自信,专注#[default]• 系统负载：#[fg=colour255]#(cut -d ' ' -f 1-3 /proc/loadavg)"
 
 set -g status-right-attr bright
-set -g status-right-length 80
+set -g status-right-length 95
 
 setw -g window-status-current-fg colour223
 setw -g window-status-current-bg colour237
